# flux

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/flux_tui/: Cargo.toml
crates/flux_tui/src/: lib.rs
crates/tui/: Cargo.toml
docs/: flux_roadmap.md
